# Sentinel

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  PROGRESS.md  README.md  SPEC.md  docker-compose.yml  justfile
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 533b92f62713_create_check_results_table.py  6518c1e84b71_create_monitors_table.py  a7c3f1e9d2b4_create_auth_source_tables.py  c9d2e5f80a14_create_check_rollups_table.py  d4a1b2c3e5f6_create_alert_tables.py  e11783af3b0a_create_monitor_states_table.py  e7f8a9b0c1d2_create_state_transitions_table.py
backend/src/sentinel/: config.py
backend/src/sentinel/application/: __init__.py  alert_channel_service.py  alert_service.py  auth_source_service.py  auth_token_service.py  check_service.py  monitor_service.py  retention_service.py  stats_service.py
backend/src/sentinel/domain/: entities.py  errors.py  ports.py  value_objects.py
backend/src/sentinel/infrastructure/: clock.py  events.py  heartbeat.py  logging_config.py  notifiers.py  probe.py  rate_limit.py  reencrypt.py  scheduler.py  secrets.py  url_guard.py
backend/src/sentinel/interface/: main.py
backend/tests/integration/: test_alert_channel_api.py  test_alert_channel_repository.py  test_auth_gate.py  test_auth_source_api.py  test_auth_source_repository.py  test_check_pipeline_alert.py  test_check_pipeline_rollup.py  test_check_pipeline_ssrf.py  test_check_pipeline_state.py  test_check_result_repository.py  test_check_rollup_repository.py  test_curl_import_api.py  test_error_envelope.py  test_events_api.py  test_health.py  test_heartbeat.py  test_httpx_probe.py  test_monitor_api.py  test_monitor_repository.py  test_monitor_state_repository.py  test_monitor_stats_api.py  test_postman_import_api.py  test_probe_auth_injection.py  test_probe_check_api.py  test_rate_limit.py  test_reencrypt.py  test_request_logging.py  test_scheduler.py  test_scheduler_loop.py  test_state_transition_repository.py
backend/tests/support/: fakes.py
backend/tests/support/fixtures/: postman_v21.json
backend/tests/unit/: test_config.py
backend/tests/unit/application/: test_alert_service.py  test_retention_service.py
backend/tests/unit/domain/: test_assertions.py  (+14 more)
(+98 files in other folders)
