[project]
name = "sentinel"
version = "0.1.0"
description = "Sentinel — HTTP API monitoring web app"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14",
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.18",
    "sqlalchemy[asyncio]>=2.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"
extend-exclude = ["alembic/versions"]  # generated migrations

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# asserts and fake secret literals are expected in tests
"tests/**" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
